# tg-benchmark

./: .gitignore  README.md  app.py  config.yaml  dataset.ipynb  dataset.jsonl  dataset_download.py  main.py  pyproject.toml  response_message_content.py  result_master.txt  test.ipynb  test.py  teste.ipynb  tests.ipynb  tests_launcher.py
agents/: __init__.py  generator_code.py  master.py  orchestrator.py  utils.py
agents/developer/: __init__.py  pompts_join_tasks.py  prompts_dev_verbosity.py  prompts_direct.py  prompts_master.py
agents/judge/: __init__.py  prompts.py
agents/qa/: __init__.py  (+1 more)
modules/: benchmark.py  buffer.py  checkpoint.py  dataloader.py  llm.py  logger.py  models.py  ollama.py  resolver.py  test_runner.py
old_results/: gemma3_1b_multi-agent.json  gemma3_1b_simple.json  gpt-oss_20b_simple.json
results/: gemma3_12b_multi-agent.json  gemma3_12b_simple.json  gemma3_1b_multi-agent.json  gemma3_1b_simple.json  gemma3_4b_multi-agent.json  gemma3_4b_simple.json  gpt-oss_20b_multi-agent.json  gpt-oss_20b_simple.json  kimi-k2_1t-cloud_simple.json  qwen2.5-coder_1.5b_multi-agent.json  qwen2.5-coder_1.5b_simple.json  qwen2.5-coder_14b_multi-agent.json  qwen2.5-coder_14b_simple.json  qwen2.5-coder_7b_multi-agent.json  qwen2.5-coder_7b_simple.json  qwen3-coder_480b-cloud_simple.json  qwen3_1.7b_multi-agent.json  qwen3_1.7b_simple.json  qwen3_14b_multi-agent.json  qwen3_14b_simple.json  qwen3_8b_multi-agent.json  qwen3_8b_simple.json
schemas/: __init__.py  plan.py  solution.py  task.py
tui/: README.md  __init__.py  app.py  config.py  handlers.py
(+62 files in other folders)
